Add Button And Font To Profile Card

--- a/1_Profile Card/index.html
+++ b/1_Profile Card/index.html
@@ -22,10 +22,10 @@
             <p>I am a junior web developer on the field,
                 willing to learn and improve my skills.
             </p>
+            <a class="btn" href="https://sotirisxanthopoulos.netlify.app/" target="_blank">View Portfolio</a>
             <footer>
                 <p>📍 Remote | Rethymno/Greece</p>
                 <p>💼 Open To Work</p>
-
             </footer>
         </div>
     </div>
