Add Linkedin Add More Padding To Card

--- a/1_Profile Card/index.html
+++ b/1_Profile Card/index.html
@@ -16,8 +16,9 @@
             <hr/>
             <a href="mailto:soteresx.dev@gmail.com" target="_blank"><i>soteresx.dev@gmail.com</i></a>
             <h2>Full-Stack Developer</h2>
-            <div>
-                <a href="https://github.com/Soteres-X"><img src="./images/githubIcon.svg" width="30px"/></a>
+            <div class="socials">
+                <a href="https://github.com/Soteres-X" target="_blank"><img src="./images/githubIcon.svg" width="30px"/></a>
+                <a href="https://www.linkedin.com/in/soteres-xanthopoulos-463818372/" target="_blank"><img src="./images/linkedinIcon.svg" width="30px"/></a>
             </div>
             <p>I am a junior web developer on the field,
                 willing to learn and improve my skills.
